# ai-3-sudoku-smart-solver

./: MANIFEST.in  Makefile  README.md  in.csv  main.py  sample.txt  setup.py
prtest/: helper.py  main.py
pyshim/: shim.py
rust/: .gitignore  Cargo.toml  unsolved.txt
rust/src/: board.rs  filledboard.rs  lib.rs  main.rs  naive.rs  smart.rs  swap.rs
rust/src/board/: positions.rs
sodoku_swap/: shim.py
unused/: compress.py  shiv-build.sh
working/: working-evade-pathlib.txt  working-pex.txt
