[package]
name = "sodoku-swap"
version = "0.1.0"
authors = ["Ruoshui <ruoshuim@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "sodoku_swap"
crate-type = ["cdylib", "rlib"]

[dependencies]
cpython = {version = "0.5", features = ["extension-module"]}