[package]
name = "sudoku"
version = "0.1.0"
authors = ["Ruoshui <ruoshuim@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rust"
crate-type = ["cdylib", "rlib"]


[features]
default = []

python = ["cpython"]

[dependencies]
fnv = "1.0.3"
cpython = {version = "0.5", features = ["extension-module"], optional = true}

